<resources>
    <string name="app_name">Tỷ Giá</string>
    <string name="gold">Vàng</string>
    <string name="usd">USD</string>
    <string name="buy">Mua</string>
    <string name="sell">Bán</string>
    <string name="copied">Đã sao chép</string>
    <string name="asset">Tài sản</string>
    <string name="share">Chia sẻ</string>
    <string name="asset_statistics">Thống kê tài sản</string>
    <string name="sjc_gold">Vàng SJC</string>
    <string name="tale_of_gold">Lượng</string>
    <string name="us_dollar">Đô la Mỹ</string>
    <string name="saving_money">Tiền tiết kiệm</string>
    <string name="vnd">VNĐ</string>
    <string name="clear">Xóa</string>
    <string name="complete">Hoàn tất</string>
    <string name="discard_changes">Bạn muốn hủy bỏ thay đổi?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="dialog_share_confirmation">Bạn muốn chia sẻ thông tin tài sản?</string>
    <string name="update_gold_price">Cập nhật giá vàng</string>
    <string name="notification_short_content">TG: %s / %s - VN: %s / %s</string>
    <string name="notification_full_content">Thế giới: %s / %s\nTrong nước: %s / %s</string>
    <string name="loading">Đang tải…</string>
    <string name="turn_off_notification">Tắt thông báo</string>
</resources>